--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "threejs-trackball-controls",
-  "version": "0.71.0",
+  "version": "0.108.0"",
   "authors": [
     "gtsop <gtsop.code@gmail.com>"
   ],
