--- a/bower.json
+++ b/bower.json
@@ -1,8 +1,8 @@
 {
   "name": "threejs-trackball-controls",
-  "version": "0.108.0"",
+  "version": "0.113.2"",
   "authors": [
-    "gtsop <gtsop.code@gmail.com>"
+    "gtsop <gtsop+code@protonmail.com>"
   ],
   "description": "Trackball controlls example from three.js project for bower",
   "main": "TrackballControls.js",
